fix : 게임 로비에서 visibility hidden 적용 에러 해결

--- a/frontend/components/game/RoomLobby.module.scss
+++ b/frontend/components/game/RoomLobby.module.scss
@@ -241,7 +241,6 @@
         font-size: 20px;
       }
       .invisible {
-        display: none;
         width: 86px;
         height: 38px;
         border-radius: 22px;
